<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map_normal"
        android:title="@string/map_normal"
        app:showAsAction="never"/>
    <item
        android:id="@+id/map_satellite"
        android:title="@string/map_satellite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/map_terrain"
        android:title="@string/map_terrain"
        app:showAsAction="never"/>
    <item
        android:id="@+id/map_hybrid"
        android:title="@string/map_hybrid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/map_none"
        android:title="@string/map_none"
        app:showAsAction="never"/>
    <item
        android:id="@+id/map_about"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_home"
        android:title="@string/title_home" />
</menu>