<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.phoenix.mbl402.LTA.MainMenu">

    <Button
        android:text="@string/user_profile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnUser"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/view_global_map"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnGlobalMap"
        android:layout_above="@+id/btnUser"
        android:layout_alignStart="@+id/btnUser" />

    <Button
        android:text="@string/view_trail_maps"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnViewMap"
        android:layout_above="@+id/btnGlobalMap"
        android:layout_alignStart="@+id/btnGlobalMap" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:scaleType="center"
        android:src="@drawable/hikingimg"
        android:id="@+id/imgHiking"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp" />

    <TextView
        android:text="@string/app_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtMainTagline"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:text="@string/main_img_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgHiking"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgDescription" />


</RelativeLayout>
