<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.phoenix.mbl402.LTA.Activities.UserProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/text_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:minWidth="@dimen/user_prof_tv_min"
            android:padding="@dimen/user_prof_padding"
            android:text="@string/user_prof_first_name"
            android:textDirection="locale"
            android:textSize="@dimen/user_prof_txt_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_firstname"
            android:layout_toEndOf="@id/text_firstname"
            android:inputType="textCapWords"
            android:minWidth="@dimen/edit_text_min"
            android:textSize="@dimen/user_prof_txt_size" />

        <TextView
            android:id="@+id/text_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_firstname"
            android:gravity="left"
            android:minWidth="@dimen/user_prof_tv_min"
            android:padding="@dimen/user_prof_padding"
            android:text="@string/user_prof_last_name"
            android:textDirection="locale"
            android:textSize="@dimen/user_prof_txt_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_lastname"
            android:layout_toEndOf="@id/text_firstname"
            android:inputType="textCapWords"
            android:minWidth="@dimen/edit_text_min"
            android:textSize="@dimen/user_prof_txt_size" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_lastname"
            android:gravity="left"
            android:minWidth="@dimen/user_prof_tv_min"
            android:padding="@dimen/user_prof_padding"
            android:text="@string/user_prof_phone"
            android:textDirection="locale"
            android:textSize="@dimen/user_prof_txt_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_phone"
            android:layout_toEndOf="@id/text_phone"
            android:inputType="phone"
            android:minWidth="@dimen/edit_text_min"
            android:textSize="@dimen/user_prof_txt_size" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_phone"
            android:gravity="left"
            android:minWidth="@dimen/user_prof_tv_min"
            android:padding="@dimen/user_prof_padding"
            android:text="@string/user_prof_email"
            android:textDirection="locale"
            android:textSize="@dimen/user_prof_txt_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_email"
            android:layout_toEndOf="@id/text_email"
            android:inputType="textCapWords"
            android:minWidth="@dimen/edit_text_min"
            android:textSize="@dimen/user_prof_txt_size" />
        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_below="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >

            <Button
                android:id="@+id/button_save"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Save"
                android:layout_gravity="left"/>

            <Button
                android:id="@+id/button_clear"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Clear" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/user_prof_cancel"
                android:layout_marginRight="5dp"/>


        </LinearLayout>



    </RelativeLayout>


</LinearLayout>
